--- a/8/index.css
+++ b/8/index.css
@@ -14,7 +14,9 @@
     z-index: 5;
     width: 100%;
     height: 100%;
-    display: none;
+    display: block;
+    transition: all 1s;
+    transform: translateY(-1000px);
 }
 
 .white-background {
@@ -42,4 +44,40 @@
 
 #password-alert{
     display:none;
+}
+
+.left-menu {
+    width: 150px;
+    height: 100%;
+    background-color: black;
+    color: white;
+    position: fixed;
+    margin-left: -150px;
+}
+
+/* carousel */
+.slide-container{
+    width: 300vw;
+    transition: transform 1s;
+}
+
+.slide-box{
+    width: 100vw;
+    float: left;
+}
+
+.slide-box img{
+    width: 100%;
+}
+
+.slide-next{
+    position: absolute;
+    top: 45%;
+    right: 0;
+}
+
+.slide-before{
+    position: absolute;
+    top: 45%;
+    left: 0;
 }
